service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocp-web-lb
spec:
  selector:
    app: ocp-web-lb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
