route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ocp-web-lb
spec:
  host: your-domain.com
  to:
    kind: Service
    name: ocp-web-lb
    weight: 100
  port:
    targetPort: 8080
